@@ -23,6 +23,7 @@
  */
 package picard.sam;
 
+import htsjdk.samtools.CigarOperator;
 import htsjdk.samtools.SAMFileHeader.SortOrder;
 import htsjdk.samtools.SAMProgramRecord;
 import htsjdk.samtools.SAMRecord;
@@ -256,8 +257,15 @@ public class MergeBamAlignment extends CommandLineProgram {
             "alignment is filtered out for some reason. For all strategies, ties are resolved arbitrarily.")
     public PrimaryAlignmentStrategy PRIMARY_ALIGNMENT_STRATEGY = PrimaryAlignmentStrategy.BestMapq;
 
-    @Argument(doc = "For paired reads, soft clip the 3' end of each read if necessary so that it does not extend past the 5' end of its mate.")
+    @Argument(doc = "For paired reads, clip the 3' end of each read if necessary so that it does not extend past the 5' end of its mate.  " +
+            "Reads are first soft clipped so that the 3' aligned end of each read does not extend past the 5' aligned end of its mate.  " +
+            "If HARD_CLIP_OVERLAPPING_READS is also true, then reads are additionally hard clipped so that the 3' unclipped end of each read " +
+            "does not extend past the 5' unclipped end of its mate.  Hard clipped bases and their qualities are stored in the XB and XQ " +
+            "tags, respectively.")
     public boolean CLIP_OVERLAPPING_READS = true;
+
+    @Argument(doc = "If true, hard clipping will be applied to overlapping reads.  By default, soft clipping is used.")
+    public boolean HARD_CLIP_OVERLAPPING_READS = false;
 
     @Argument(doc = "If false, do not write secondary alignments to output.")
     public boolean INCLUDE_SECONDARY_ALIGNMENTS = true;
@@ -273,7 +281,7 @@ public class MergeBamAlignment extends CommandLineProgram {
     public int MIN_UNCLIPPED_BASES = 32;
 
     @Argument(doc = "List of Sequence Records tags that must be equal (if present) in the reference dictionary and in the aligned file. Mismatching tags will cause an error if in this list, and a warning otherwise.")
-    public List<String> MATCHING_DICTIONARY_TAGS = SAMSequenceDictionary.DEFAULT_DICTIONARY_EQUAL_TAG;
+    public List<String> MATCHING_DICTIONARY_TAGS = new ArrayList<>(SAMSequenceDictionary.DEFAULT_DICTIONARY_EQUAL_TAG);
 
     @Argument(doc = "How to deal with alignment information in reads that are being unmapped (e.g. due to cross-species contamination.) " +
             "Currently ignored unless UNMAP_CONTAMINANT_READS = true. Note that the DO_NOT_CHANGE strategy will actually reset the cigar and set the mapping quality on unmapped reads since otherwise" +
@@ -302,7 +310,7 @@ public class MergeBamAlignment extends CommandLineProgram {
                 "the alignment pair with the largest insert size. If all alignments would be chimeric, it picks the " +
                 "alignments for each end with the best MAPQ. ");
 
-        private final Class<PrimaryAlignmentSelectionStrategy> clazz;
+        private final Class<? extends PrimaryAlignmentSelectionStrategy> clazz;
 
         private final String description;
 
@@ -310,14 +318,14 @@ public class MergeBamAlignment extends CommandLineProgram {
             return description;
         }
 
-        PrimaryAlignmentStrategy(final Class<?> clazz, final String description) {
-            this.clazz = (Class<PrimaryAlignmentSelectionStrategy>) clazz;
+        PrimaryAlignmentStrategy(final Class<? extends PrimaryAlignmentSelectionStrategy> clazz, final String description) {
+            this.clazz = clazz;
             this.description = description;
         }
 
         PrimaryAlignmentSelectionStrategy newInstance() {
             try {
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new PicardException("Trouble instantiating " + clazz.getName(), e);
             }
@@ -348,7 +356,9 @@ public class MergeBamAlignment extends CommandLineProgram {
                 READ1_ALIGNED_BAM, READ2_ALIGNED_BAM, EXPECTED_ORIENTATIONS, SORT_ORDER,
                 PRIMARY_ALIGNMENT_STRATEGY.newInstance(), ADD_MATE_CIGAR, UNMAP_CONTAMINANT_READS,
                 MIN_UNCLIPPED_BASES, UNMAPPED_READ_STRATEGY, MATCHING_DICTIONARY_TAGS);
+
         merger.setClipOverlappingReads(CLIP_OVERLAPPING_READS);
+        merger.setHardClipOverlappingReads(HARD_CLIP_OVERLAPPING_READS);
         merger.setMaxRecordsInRam(MAX_RECORDS_IN_RAM);
         merger.setKeepAlignerProperPairFlags(ALIGNER_PROPER_PAIR_FLAGS);
         merger.setIncludeSecondaryAlignments(INCLUDE_SECONDARY_ALIGNMENTS);
